<resources>
    <string name="app_name">easyToShot</string>
    <string name="example"><b>example</b></string>
    <string name="bullet">■</string>
    <string name="desc">gender</string>
    <string name="nuevo">Nuevo Alumno</string>
    <string name="carnet">carnet</string>
    <string name="nombre">nombre</string>
    <string name="apellido">apellido</string>
    <string name="edad">edad</string>
    <string name="f">F</string>
    <string name="m">M</string>
    <string name="reg">Registrarse</string>
    <string name="curso">curso</string>
    <string name="todo">TODO</string>
    <string name="_0">0</string>
    <string name="foto_carnet">foto carnet</string>
    <string name="capturar">Capturar</string>
    <string name="tildDesc">tiene imagen</string>
    <string name="divisor">divisor</string>
    <string name="turno">Turno:</string>
    <string name="dni">Dni:</string>
    <string name="editurl">URL del servidor</string>
    <string name="guardar">Guardar</string>
    <string name="url">url</string>
    <string name="solicitarURL">No se pudo conectar con el servidor, le pedimos que nos confirme la url del mismo</string>
</resources>