<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="SmallSp">

    <TextView
        android:id="@+id/tv_curso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_0"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/check_cur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/tildDesc"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pb_curso"
        app:layout_constraintStart_toStartOf="@+id/pb_curso"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_check_24" />

    <ImageView
        android:id="@+id/divisor_cur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/divisor"
        android:rotation="145"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pb_curso"
        app:layout_constraintStart_toStartOf="@+id/pb_curso"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_divisor" />

    <ProgressBar
        android:id="@+id/pb_curso"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:progressDrawable="@drawable/circle"
        android:rotation="270"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_actual_cur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="@color/colorAlternate"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/pb_curso"
        app:layout_constraintEnd_toEndOf="@+id/pb_curso"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="@+id/pb_curso"
        app:layout_constraintTop_toTopOf="@+id/pb_curso"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/tv_total_cur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="@color/colorAlternate"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/pb_curso"
        app:layout_constraintEnd_toEndOf="@+id/pb_curso"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="@+id/pb_curso"
        app:layout_constraintTop_toTopOf="@+id/pb_curso"
        app:layout_constraintVertical_bias="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>